@@ -1,0 +1,3 @@
+#undef _GNU_SOURCE
+
+#include <test-assert.c>
